<resources>
    <string name="app_name">My Application</string>
    <string name="todo">TODO</string>
    <string name="email">Email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password:</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_yet_register_now">Don\'t have an account yet? Register now</string>

</resources>